--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
       if: startsWith(github.event.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
-        name: T2C - ${{ github.ref }}
+        name: T2C - ${{ env.GITHUB_REF_NAME }}
         generate_release_notes: true
         files: |
           t2c.zip
